[gd_scene load_steps=17 format=3 uid="uid://puy7702b6825"]

[ext_resource type="Script" path="res://MainScreen.gd" id="1_vwtr6"]
[ext_resource type="Script" path="res://VersionList.gd" id="2_3dyfo"]
[ext_resource type="Theme" uid="uid://gkru8pdyoyh1" path="res://Theme.tres" id="2_6swsi"]
[ext_resource type="StyleBox" uid="uid://ckc3m8k5n70qr" path="res://Styles/Panel.tres" id="3_pvbau"]
[ext_resource type="Script" path="res://Description.gd" id="3_scoms"]
[ext_resource type="Script" path="res://PlatformSelection.gd" id="5_owkid"]
[ext_resource type="StyleBox" uid="uid://cog0npjrw60i0" path="res://Styles/ButtonNormal.tres" id="5_rs7ex"]
[ext_resource type="StyleBox" uid="uid://b0u1y7dlqttxq" path="res://Styles/ButtonHover.tres" id="6_23a33"]
[ext_resource type="StyleBox" uid="uid://dympdw2irokbt" path="res://Styles/ButtonPressed.tres" id="7_mwj2q"]
[ext_resource type="StyleBox" uid="uid://bl7jgntjvo7gg" path="res://Styles/ButtonDisabled.tres" id="8_6mfmy"]
[ext_resource type="Script" path="res://Status.gd" id="10_ak1ga"]
[ext_resource type="Script" path="res://ToggleSetting.gd" id="11_obbth"]
[ext_resource type="Script" path="res://Logs.gd" id="12_u52w3"]
[ext_resource type="Script" path="res://TextSetting.gd" id="13_6xp12"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cy073"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_63am3"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.705882, 0.705882, 0.705882, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 5

[node name="MainScreen" type="Control" node_paths=PackedStringArray("logs")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_6swsi")
script = ExtResource("1_vwtr6")
logs = NodePath("Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer/Logs")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.172549, 0.172549, 0.172549, 1)

[node name="VersionList" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VersionList"]
layout_mode = 2

[node name="VersionList" type="PanelContainer" parent="VersionList/VBoxContainer" node_paths=PackedStringArray("main_screen", "version_buttons_parent", "description")]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_6swsi")
theme_override_styles/panel = ExtResource("3_pvbau")
script = ExtResource("2_3dyfo")
main_screen = NodePath("../../..")
version_buttons_parent = NodePath("VSplitContainer/ScrollContainer/VBoxContainer")
description = NodePath("../CurrentVersion/ScrollContainer/Description")

[node name="VSplitContainer" type="VSplitContainer" parent="VersionList/VBoxContainer/VersionList"]
layout_mode = 2
dragger_visibility = 1

[node name="Title" type="Label" parent="VersionList/VBoxContainer/VersionList/VSplitContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Versions"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VersionList/VBoxContainer/VersionList/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VersionList/VBoxContainer/VersionList/VSplitContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VersionList/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("3_pvbau")

[node name="Settings" type="Button" parent="VersionList/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_styles/normal = ExtResource("5_rs7ex")
theme_override_styles/hover = ExtResource("6_23a33")
theme_override_styles/pressed = ExtResource("7_mwj2q")
theme_override_styles/disabled = ExtResource("8_6mfmy")
theme_override_styles/focus = ExtResource("6_23a33")
text = "Settings"

[node name="VBoxContainer2" type="VBoxContainer" parent="VersionList"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CurrentVersion" type="PanelContainer" parent="VersionList/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("3_pvbau")

[node name="ScrollContainer" type="ScrollContainer" parent="VersionList/VBoxContainer2/CurrentVersion"]
layout_mode = 2

[node name="Description" type="Label" parent="VersionList/VBoxContainer2/CurrentVersion/ScrollContainer" node_paths=PackedStringArray("main_screen", "version_list", "platform_selection")]
layout_mode = 2
size_flags_horizontal = 3
text = "Loading version list..."
autowrap_mode = 2
script = ExtResource("3_scoms")
main_screen = NodePath("../../../../..")
version_list = NodePath("../../../../VBoxContainer/VersionList")
platform_selection = NodePath("../../../Downloads/MarginContainer/HBoxContainer/PlatformSelection")

[node name="ReadmeRequest" type="HTTPRequest" parent="VersionList/VBoxContainer2/CurrentVersion/ScrollContainer/Description"]

[node name="PanelContainer" type="PanelContainer" parent="VersionList/VBoxContainer2"]
layout_mode = 2
theme_override_styles/panel = ExtResource("3_pvbau")

[node name="VBoxContainer" type="VBoxContainer" parent="VersionList/VBoxContainer2/PanelContainer"]
layout_mode = 2

[node name="Status" type="Label" parent="VersionList/VBoxContainer2/PanelContainer/VBoxContainer" node_paths=PackedStringArray("logs")]
layout_mode = 2
text = "Status..."
text_overrun_behavior = 3
script = ExtResource("10_ak1ga")
logs = NodePath("../../../../../Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer/Logs")

[node name="ProgressContainer" type="Panel" parent="VersionList/VBoxContainer2/PanelContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cy073")

[node name="ProgressBar" type="Panel" parent="VersionList/VBoxContainer2/PanelContainer/VBoxContainer/ProgressContainer"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_63am3")

[node name="Downloads" type="PanelContainer" parent="VersionList/VBoxContainer2"]
layout_mode = 2
theme_override_styles/panel = ExtResource("3_pvbau")

[node name="MarginContainer" type="MarginContainer" parent="VersionList/VBoxContainer2/Downloads"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VersionList/VBoxContainer2/Downloads/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Remove" type="Button" parent="VersionList/VBoxContainer2/Downloads/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_styles/normal = ExtResource("5_rs7ex")
theme_override_styles/hover = ExtResource("6_23a33")
theme_override_styles/pressed = ExtResource("7_mwj2q")
theme_override_styles/disabled = ExtResource("8_6mfmy")
theme_override_styles/focus = ExtResource("6_23a33")
disabled = true
text = "Remove Version for All Platforms"

[node name="PlatformSelection" type="OptionButton" parent="VersionList/VBoxContainer2/Downloads/MarginContainer/HBoxContainer" node_paths=PackedStringArray("main_screen", "version_list", "remove_button", "download_button", "validate_button", "run_button", "progress_bar_container", "status", "logs")]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
text_direction = 1
script = ExtResource("5_owkid")
main_screen = NodePath("../../../../../..")
version_list = NodePath("../../../../../VBoxContainer/VersionList")
remove_button = NodePath("../Remove")
download_button = NodePath("../Download")
validate_button = NodePath("../Validate")
run_button = NodePath("../Run")
progress_bar_container = NodePath("../../../../PanelContainer/VBoxContainer/ProgressContainer")
status = NodePath("../../../../PanelContainer/VBoxContainer/Status")
logs = NodePath("../../../../../../Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer/Logs")

[node name="DownloadRequest" type="HTTPRequest" parent="VersionList/VBoxContainer2/Downloads/MarginContainer/HBoxContainer/PlatformSelection"]
download_chunk_size = 1048576
use_threads = true

[node name="Download" type="Button" parent="VersionList/VBoxContainer2/Downloads/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_styles/normal = ExtResource("5_rs7ex")
theme_override_styles/hover = ExtResource("6_23a33")
theme_override_styles/pressed = ExtResource("7_mwj2q")
theme_override_styles/disabled = ExtResource("8_6mfmy")
theme_override_styles/focus = ExtResource("6_23a33")
disabled = true
text = "Download"

[node name="Validate" type="Button" parent="VersionList/VBoxContainer2/Downloads/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_styles/normal = ExtResource("5_rs7ex")
theme_override_styles/hover = ExtResource("6_23a33")
theme_override_styles/pressed = ExtResource("7_mwj2q")
theme_override_styles/disabled = ExtResource("8_6mfmy")
theme_override_styles/focus = ExtResource("6_23a33")
disabled = true
text = "Validate"

[node name="Run" type="Button" parent="VersionList/VBoxContainer2/Downloads/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_styles/normal = ExtResource("5_rs7ex")
theme_override_styles/hover = ExtResource("6_23a33")
theme_override_styles/pressed = ExtResource("7_mwj2q")
theme_override_styles/disabled = ExtResource("8_6mfmy")
theme_override_styles/focus = ExtResource("6_23a33")
disabled = true
text = "Run"

[node name="Settings" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(256, 0)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("2_6swsi")
theme_override_styles/panel = ExtResource("3_pvbau")

[node name="VSplitContainer" type="VSplitContainer" parent="Settings"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/VSplitContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Settings/VSplitContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Settings/VSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/VSplitContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClearAllData" type="Button" parent="Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_styles/normal = ExtResource("5_rs7ex")
theme_override_styles/hover = ExtResource("6_23a33")
theme_override_styles/pressed = ExtResource("7_mwj2q")
theme_override_styles/disabled = ExtResource("8_6mfmy")
theme_override_styles/focus = ExtResource("6_23a33")
text = "Clear All Downloaded Data"

[node name="VBoxContainer2" type="VBoxContainer" parent="Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AutoSelectPlatform" type="CheckButton" parent="Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
button_pressed = true
text = "Automatically Select This Computer's Platform"
alignment = 2
script = ExtResource("11_obbth")
setting = "AutoSelectPlatform"

[node name="Mono" type="CheckButton" parent="Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Include Mono Builds"
alignment = 2
script = ExtResource("11_obbth")
setting = "IncludeMono"

[node name="AutoSelectMono" type="CheckButton" parent="Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Automatically Select Mono Builds"
alignment = 2
script = ExtResource("11_obbth")
setting = "AutoSelectMono"
requirement_setting = "IncludeMono"

[node name="AllPlatforms" type="CheckButton" parent="Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Include Other Platforms"
alignment = 2
script = ExtResource("11_obbth")
setting = "AllPlatforms"

[node name="3_5Releases" type="CheckButton" parent="Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
button_pressed = true
text = "Include Godot 3 Releases"
alignment = 2
script = ExtResource("11_obbth")
setting = "IncludeGodot3"

[node name="3_5PreReleases" type="CheckButton" parent="Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Include Godot 3 Pre-releases"
alignment = 2
script = ExtResource("11_obbth")
setting = "IncludeGodot3PreReleases"

[node name="4PreReleases" type="CheckButton" parent="Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
button_pressed = true
text = "Include Godot 4 Pre-releases"
alignment = 2
script = ExtResource("11_obbth")
setting = "IncludeGodot4PreReleases"

[node name="AutoClose" type="CheckButton" parent="Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
button_pressed = true
text = "Close GodotManager After Clicking \"Run\""
alignment = 2
script = ExtResource("11_obbth")
setting = "AutoClose"

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Local Build Directory"
horizontal_alignment = 2

[node name="LocalBuildDirectory" type="LineEdit" parent="Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "user://builds"
script = ExtResource("13_6xp12")
setting = "LocalBuildDirectory"

[node name="Reset" type="Button" parent="Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_styles/normal = ExtResource("5_rs7ex")
theme_override_styles/hover = ExtResource("6_23a33")
theme_override_styles/pressed = ExtResource("7_mwj2q")
theme_override_styles/disabled = ExtResource("8_6mfmy")
theme_override_styles/focus = ExtResource("6_23a33")
text = "Reset"

[node name="LogsLabel" type="Label" parent="Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Log:"

[node name="Logs" type="TextEdit" parent="Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3
editable = false
shortcut_keys_enabled = false
script = ExtResource("12_u52w3")

[node name="Versions" type="Button" parent="Settings/VSplitContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_styles/normal = ExtResource("5_rs7ex")
theme_override_styles/hover = ExtResource("6_23a33")
theme_override_styles/pressed = ExtResource("7_mwj2q")
theme_override_styles/disabled = ExtResource("8_6mfmy")
theme_override_styles/focus = ExtResource("6_23a33")
text = "Versions"

[connection signal="versions_updated" from="." to="VersionList/VBoxContainer/VersionList" method="refresh_version_list"]
[connection signal="new_version_added" from="VersionList/VBoxContainer/VersionList" to="VersionList/VBoxContainer2/Downloads/MarginContainer/HBoxContainer/PlatformSelection" method="_on_version_list_new_version_added"]
[connection signal="new_version_selected" from="VersionList/VBoxContainer/VersionList" to="VersionList/VBoxContainer2/CurrentVersion/ScrollContainer/Description" method="_on_version_list_new_version_selected"]
[connection signal="new_version_selected" from="VersionList/VBoxContainer/VersionList" to="VersionList/VBoxContainer2/Downloads/MarginContainer/HBoxContainer/PlatformSelection" method="_on_version_list_new_version_selected"]
[connection signal="pressed" from="VersionList/VBoxContainer/PanelContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VersionList/VBoxContainer2/Downloads/MarginContainer/HBoxContainer/Remove" to="VersionList/VBoxContainer2/Downloads/MarginContainer/HBoxContainer/PlatformSelection" method="_on_remove_pressed"]
[connection signal="item_selected" from="VersionList/VBoxContainer2/Downloads/MarginContainer/HBoxContainer/PlatformSelection" to="VersionList/VBoxContainer2/Downloads/MarginContainer/HBoxContainer/PlatformSelection" method="_on_item_selected"]
[connection signal="pressed" from="VersionList/VBoxContainer2/Downloads/MarginContainer/HBoxContainer/Download" to="VersionList/VBoxContainer2/Downloads/MarginContainer/HBoxContainer/PlatformSelection" method="_on_download_pressed"]
[connection signal="pressed" from="VersionList/VBoxContainer2/Downloads/MarginContainer/HBoxContainer/Validate" to="VersionList/VBoxContainer2/Downloads/MarginContainer/HBoxContainer/PlatformSelection" method="_on_validate_pressed"]
[connection signal="pressed" from="VersionList/VBoxContainer2/Downloads/MarginContainer/HBoxContainer/Run" to="VersionList/VBoxContainer2/Downloads/MarginContainer/HBoxContainer/PlatformSelection" method="_on_run_pressed"]
[connection signal="pressed" from="Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ClearAllData" to="." method="clear_all_data"]
[connection signal="pressed" from="Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/Reset" to="Settings/VSplitContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/LocalBuildDirectory" method="reset"]
[connection signal="pressed" from="Settings/VSplitContainer/VBoxContainer/Versions" to="." method="_on_versions_pressed"]
[connection signal="pressed" from="Settings/VSplitContainer/VBoxContainer/Versions" to="VersionList/VBoxContainer/VersionList" method="refresh_version_list"]
[connection signal="pressed" from="Settings/VSplitContainer/VBoxContainer/Versions" to="VersionList/VBoxContainer2/Downloads/MarginContainer/HBoxContainer/PlatformSelection" method="refresh_platform_list"]
